--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,18 @@ body {
     }
 }
 
+@media(max-width: 367px) {
+    .nav .nav-item {
+        padding: 5px;
+    }
+
+    .nav .nav-item .nav-link {
+        padding: 0px;
+        font-size: 10px;
+        font-weight: bold;
+    }
+}
+
 /* css of header section end */
 
 /* css for conenction div start */
