--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,9 @@ body {
     background-color: var(--container-background-color);
     margin-bottom: 25px;
     border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+    -moz-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
 }
 
 .content-row-container-name {
