--- a/css/style.css
+++ b/css/style.css
@@ -27,49 +27,35 @@ body {
     margin-bottom: 10px;
 }
 
-.nav-item:hover {
-    background-color: var(--background-color);
+.nav-item{
     font-weight: bold;
 }
 
-@media(max-width: 1200px) {
-    .nav-link {
-        font-size: 14px;
-    }
+.nav-item:hover {
+    background-color: var(--background-color);
+    font-weight: bold;
+    border-radius: 8px;
 }
 
-@media(max-width: 992px) and (min-width: 767px) {
-    .nav-link {
-        font-size: 15px;
-    }
-}
 
-@media(max-width: 767px) {
-    .nav-link {
-        font-size: 14px;
-    }
-}
-
-@media(max-width: 576px) {
-    .nav .nav-item {
-        padding: 5px;
-        font-size: 12px;
+/* Make the collapsible menu vertical */
+@media (max-width: 767.98px) {
+    .navbar-collapse {
+        flex-direction: column;
+        align-items: stretch;
     }
 
-    .nav .nav-item .nav-link {
-        padding: 0px;
-        font-size: 12px;
-    }
-}
-
-@media(max-width: 367px) {
-    .nav .nav-item {
-        padding: 5px;
+    .nav {
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
     }
 
-    .nav .nav-item .nav-link {
-        padding: 0px;
-        font-size: 10px;
+    .nav-item {
+        margin-bottom: 0.5rem;
+        font-weight: bold;
     }
 }
 
