--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,17 @@ body {
     padding: 0px;
     margin: 0px;
     overflow-x: scroll;
-    /* min-height: 100vh; */
+    background-color: aliceblue;
 }
 
 /* css of header section start */
 .navbar {
-    /* position: fixed; */
-    /* z-index: 1000; */
     width: 100%;
     top: 0px;
 }
 
 .header {
-    background-color: var(--container-background-color);
+    background-color: #fff;
     margin-bottom: 10px;
 }
 
@@ -35,6 +33,13 @@ body {
     background-color: var(--background-color);
     font-weight: bold;
     border-radius: 8px;
+}
+.navbar-nav li a {
+    color: #fff !important;
+}
+
+.navbar-nav li a:hover {
+    color: #ffe4c4 !important;
 }
 
 
@@ -59,70 +64,23 @@ body {
     }
 }
 
-/* css of header section end */
-
-/* css for conenction div start */
-/* .connection-div{
-    background-color: var(--background-color);
-    padding: 10px;
-    margin-bottom: 50px;
-    border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-} */
-
-/* css for connection div end */
-
 .page-main-div {
     min-height: 95vh;
 }
 
-.page-main-div div .container {
+.page-title-div {
     padding: 25px;
     margin-bottom: 45px;
     background-color: var(--background-color);
     border-radius: 8px;
 }
 
-.page-main-div div .container h1 {
+.page-title-div h1 {
     color: #000;
     font-weight: bold;
     font-size: 30px;
 }
 
-.navbar-nav li a {
-    font-weight: bold;
-}
-
-.content-row {
-    padding: 15px;
-    background-color: var(--container-background-color);
-    margin-bottom: 25px;
-    border-radius: 8px;
-    -moz-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
-    -webkit-box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
-}
-
-.content-row-container-name {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.content-row-container-name:hover {
-    background-color: var(--background-color);
-}
-
-.content-row-video-link {
-    font-size: 15px;
-    font-weight: bold;
-}
-
-.content-row-video-link :hover {
-    text-decoration: none;
-    color: black;
-}
-
-td:nth-child(4),
 td:nth-child(3) {
     text-align: center;
 }
@@ -147,30 +105,6 @@ td:nth-child(3) {
 .table tr td:nth-child(3) {
     width: 10%;
 }
-
-.table tr td:nth-child(4) {
-    width: 10%;
-}
-
-
-@media(max-width: 576px) {
-    .table tr th:nth-child(1) {
-        width: 10%;
-    }
-
-    .table tr td:nth-child(2) {
-        width: 60%;
-    }
-
-    .table tr td:nth-child(3) {
-        width: 10%;
-    }
-
-    .table tr td:nth-child(4) {
-        width: 10%;
-    }
-}
-
 
 .footer {
     height: 50px;
