array thumbnail added

--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,13 @@
 }
 
 .card-body .btn{
-    background-color: aliceblue;
+    background-color: #fff;
     border-radius: 5px;
+    border: solid 1.5px #000;
+    color: blue;
 }
 
 .card:hover .card-body .btn{
     background-color: #ffe4c4;
+    border: solid 1.5px #ffe4c4;
 }
