--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,6 @@ td:nth-child(3) {
     text-align: center;
 }
 
-.fa-external-link-square {
-    font-size: 20px;
-}
-
 .fa-youtube-play {
     color: red;
     font-size: 20px;
@@ -123,7 +119,7 @@ td:nth-child(3) {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    background-color: #f2f2f2;
+    background-color: #d2e6ed;
     border-radius: 5px;
     padding: 12px;
     margin-bottom: 10px;
@@ -205,7 +201,8 @@ td:nth-child(3) {
     background-color: var(--background-color);
     color: #fff;
 }
-.footer div a{
+
+.footer div a {
     color: #000;
 }
 
