--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,27 @@
 /* 
     Author: Pankaj Kumar
 */
+.about-stl-page>div {
+    position: relative;
+    padding: 10px;
+    margin: 10px;
+    margin-bottom: 20px;
+}
+
+.about-stl-page>div::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 5px;
+    background-color: green;
+}
 
 .card{
     border-radius: 5px;
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
 }
-
 
 .card-body .btn{
     background-color: #fff;
