--- a/css/style.css
+++ b/css/style.css
@@ -203,14 +203,16 @@ td:nth-child(3) {
 
 
 .footer {
-    height: 50px;
+    /* height: 50px; */
 }
 
 .footer div {
     font-size: 14px;
     text-align: center;
+    justify-content: center;
     margin: auto;
-    padding-top: 8px;
+    padding-top: 10px;
+    padding-bottom: 1px;
     background-color: var(--background-color);
     color: #fff;
 }
